# MarksAnalysis

./: 8th.xlsx  Analysis.xlsx  AppConfiguration.py  Classes.py  DataBase.py  ExcelOperations.py  ImportData.py  InformationScreen.py  SearchScreen.py  Student.py  StudentManagement.db  SubjectsScreen.py  Test File.xlsx  _Start Here ...py  main.py  pyproject.toml
